view: Fix infinite loop over annotation windows

When fixing bug 760299, we introduced an infinite loop
that is triggered (sometimes) when removing annotations.
This patch fixes that.

https://bugzilla.gnome.org/show_bug.cgi?id=785975